<resources>
    <string name="app_name">ExpenseManaging</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_world">Hello World!</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="app_title">EXPENSE MANAGEMENT</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="LogIn">Cho tôi xin tên của bạn</string>
    <string name="UserName">Tên của bạn là?</string>

    /Headings
    <string name="heading_one">Quản lý chi tiêu hiệu quả với Expense Manager</string>
    <string name="heading_two">Cắt giảm những chi phí không cần thiết</string>
    <string name="heading_three">Gia tăng tiết kiệm đều đặn hàng tháng</string>
    <string name="heading_fourth">Đảm bảo thông tin của bạn luôn được bảo mật</string>
    <string name="heading_fifth">Báo cáo và phân tích bằng biểu đồ trực quan</string>

    //Description
    <string name="desc_one">Cho phép bạn theo dõi chi tiêu của mình bằng cách ghi lại các giao dịch và phân loại chúng để dễ dàng phân tích</string>
    <string name="desc_two">Giúp bạn lập kế hoạch và đặt ngân sách cho các danh mục chi tiêu khác nhau và cung cấp cảnh báo và thông báo khi vượt quá ngân sách</string>
    <string name="desc_three">Cho phép bạn đặt và theo dõi mục tiêu tiết kiệm và cung cấp phản hồi trực quan về tiến độ đạt được mục tiêu đó</string>
    <string name="desc_fourth">Đảm bảo rằng dữ liệu của bạn được bảo vệ bằng cách triển khai các giao thức xác thực và mã hóa an toàn và cung cấp tùy chọn cho cài đặt bảo mật và riêng tư</string>
    <string name="déc_fifth">Cung cấp cho bạn báo cáo chi tiêu chi tiết và phân tích thói quen chi tiêu , giúp xác định các lĩnh vực mà bạn có thể tiết kiệm tiền và đưa ra quyết định tài chính thông minh hơn</string>
    <string name="TODO">TODO</string>
    <string name="Mnemonic">Ghi chú</string>
    <string name="MoneySpent">Tiền chi là</string>
    <string name="ChooseEvent">Chọn sự kiện</string>

    <string-array name="expense_option">
        <item>Đồ ăn</item>
        <item>Tiền điện</item>
        <item>Cước</item>
        <item>Tiền nước</item>
        <item>Nợ</item>
        <item>Lặt vặt</item>
        <item>Khấu hao</item>
        <item>Thêm</item>
    </string-array>
    <string name="title_activity_phap_is_testing">Phap_is_testing</string>
</resources>